deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spotify-utils
---
apiVersion: v1
kind: Service
metadata:
  name: spotify-utils-auth
  namespace: spotify-utils
spec:
  selector:
    spotify-utils-auth: expose
  ports:
    - name: http
      port: 80
      targetPort: 30001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-utils
  namespace: spotify-utils
spec:
  rules:
    - host: spotify-utils.is.erj4.uk
      http:
        paths:
          - pathType: Prefix
            path: "/callback"
            backend:
              service:
                name: spotify-utils-auth
                port:
                  name: http
